# Game-of-Life

./: .clang-tidy  CMakeLists.txt  Fetch.cmake  README.md
src/: main.cpp
src/app/: CMakeLists.txt  game_of_life_main.cpp
src/lib/: CMakeLists.txt  Game.cpp  Game.hpp  utils.cpp  utils.hpp
